--- a/stage1/main.css
+++ b/stage1/main.css
@@ -53,9 +53,21 @@ main {
 
 main aside {
     padding: 10px 20px;
-    max-width: 20%;
+    width: 20%;
 }
 
 main section {
-    max-width: calc(80% - 5px);
+    padding: 10px 20px;
+    width: calc(80% - 6px);
+}
+
+main section article {
+    border: 1px solid gray;
+    border-left: 0;
+    border-right: 0;
+    padding: 20px 0;
+}
+
+main section article h2 {
+    margin-bottom: 10px;
 }
