--- a/stage1/main.css
+++ b/stage1/main.css
@@ -40,7 +40,8 @@ header .menu ul li {
     padding: 10px 20px;
 }
 
-header .menu ul li a {
+header .menu ul li a,
+header .menu ul li span{
     text-decoration: none;
     color: black;
     font-family: sans-serif;
@@ -70,4 +71,9 @@ main section article {
 
 main section article h2 {
     margin-bottom: 10px;
+}
+
+main section article h3 {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
