--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,7 @@
 html {
     height: 100%;
 }
+
 body {
     min-height: 100%;
 }
@@ -41,7 +42,7 @@ header .menu ul li {
 }
 
 header .menu ul li a,
-header .menu ul li span{
+header .menu ul li span {
     text-decoration: none;
     color: black;
     font-family: sans-serif;
@@ -76,4 +77,107 @@ main section article h2 {
 main section article h3 {
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+
+.inputfield {
+    z-index: 9999999999999;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    display: none;
+    width: 300px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+}
+
+.inputfield.active {
+    display: block;
+}
+
+.inputfield-button {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    border: 1px solid red;
+}
+
+.code {
+    background-color: gray;
+    font-family: serif;
+    font-size: 14px;
+    padding: 20px 10px;
+}
+
+.viewport {
+    margin-top: 10px;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.btn {
+    display: inline-block;
+    box-sizing: content-box;
+    padding: 10px;
+    border: 2px solid gray;
+}
+
+.btn:hover {
+    background-color: white;
+    cursor: pointer;
+}
+
+
+input[type="checkbox"] {
+    display: block;
+    z-index: -1;
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: none;
+}
+
+.checkbox-flag .fake-checkbox {
+    width: 2em;
+    height: calc(1em + 2px);
+    border: 1px solid red;
+    border-radius: 10px;
+    display: inline-block;
+    position: relative;
+}
+
+.checkbox-flag .fake-checkbox:after {
+    content: ' ';
+    display: block;
+    width: calc(1em - 2px);
+    height: calc(1em - 2px);
+    position: absolute;
+    left: 0;
+    border-radius: 50%;
+    border: 1px solid red;
+    background-color: red;
+
+    transition: all ease 0.2s;
+}
+
+.checkbox-flag input[type="checkbox"]:checked + .fake-checkbox:after {
+    left: 50%;
+}
+
+.checkbox-flag input[type="checkbox"]:hover + .fake-checkboxs,
+.checkbox-flag input[type="checkbox"]:focus + .fake-checkbox {
+    box-shadow: 0 0 10px red;
+}
+
+.checkbox-flag input[type="checkbox"]:checked + .fake-checkbox {
+    background-color: indianred;
+}
+
+.checkbox-flag input[type="checkbox"]:active + .fake-checkbox:after {
+    background-color: orange;
+}
+
+.checkbox-flag input[type="checkbox"]:disabled + .fake-checkbox:after {
+    background-color: darkred;
 }
