--- a/src/main.css
+++ b/src/main.css
@@ -127,57 +127,63 @@ main section article h3 {
     cursor: pointer;
 }
 
+.checkbox {
+    display: inline-block;
+}
 
-input[type="checkbox"] {
+.checkbox__hiden-part {
     display: block;
-    z-index: -1;
+    z-index: -999999;
     opacity: 0;
-    position: absolute;
     width: 0;
     height: 0;
     border: none;
 }
 
-.checkbox-flag .fake-checkbox {
+.checkbox.checkbox__type-flag .checkbox__visible-part {
     width: 2em;
-    height: calc(1em + 2px);
-    border: 1px solid red;
-    border-radius: 10px;
+    height: 1em;
+    outline: 0.1em solid #252525;
+    border-radius: 0.625em;
     display: inline-block;
     position: relative;
 }
 
-.checkbox-flag .fake-checkbox:after {
+.checkbox.checkbox__type-flag .checkbox__visible-part:after {
     content: ' ';
     display: block;
-    width: calc(1em - 2px);
-    height: calc(1em - 2px);
+    width: 1em;
+    height: 1em;
     position: absolute;
     left: 0;
     border-radius: 50%;
-    border: 1px solid red;
-    background-color: red;
+    outline: 0.1em solid #252525;
+    background-color: #676767;
 
     transition: all ease 0.2s;
 }
 
-.checkbox-flag input[type="checkbox"]:checked + .fake-checkbox:after {
+.checkbox.checkbox__type-flag .checkbox__hiden-part:checked + .checkbox__visible-part:after {
     left: 50%;
 }
 
-.checkbox-flag input[type="checkbox"]:hover + .fake-checkboxs,
-.checkbox-flag input[type="checkbox"]:focus + .fake-checkbox {
-    box-shadow: 0 0 10px red;
+.checkbox.checkbox__type-flag .checkbox__hiden-part:hover + .checkbox__visible-part,
+.checkbox.checkbox__type-flag .checkbox__hiden-part:focus + .checkbox__visible-part {
+    box-shadow: 0 0 10px #5d5d5d;
 }
 
-.checkbox-flag input[type="checkbox"]:checked + .fake-checkbox {
-    background-color: indianred;
+.checkbox.checkbox__type-flag .checkbox__hiden-part:hover + .checkbox__visible-part:after {
+    background-color: #5d5d5d;
 }
 
-.checkbox-flag input[type="checkbox"]:active + .fake-checkbox:after {
+.checkbox.checkbox__type-flag .checkbox__hiden-part:checked + .checkbox__visible-part {
+    background-color: #773f72;
+}
+
+.checkbox.checkbox__type-flag .checkbox__hiden-part:active + .checkbox__visible-part:after {
     background-color: orange;
 }
 
-.checkbox-flag input[type="checkbox"]:disabled + .fake-checkbox:after {
-    background-color: darkred;
+.checkbox.checkbox__type-flag .checkbox__hiden-part:disabled + .checkbox__visible-part:after {
+    background-color: #773f72;
 }
