--- a/src/yandex/style/main.css
+++ b/src/yandex/style/main.css
@@ -1,4 +1,13 @@
+@charset "UTF-8";
 @import "../fonts/YS_text/stylesheet.css";
+@keyframes blink {
+  from, to {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -18,53 +27,90 @@ body {
   min-width: 1000px;
 }
 
-.geolink {
-  padding-right: 14px;
+.icon {
+  display: inline-block;
+  mask-size: 100% 100%;
+  mask-position: center;
+  width: 100%;
+  height: 100%;
+  vertical-align: baseline;
 }
-.geolink * {
+.icon._geo {
+  mask-image: url("../images/icons/icon-geo.svg");
+}
+.icon._cart {
+  mask-image: url("../images/icons/icon-cart.png");
+}
+.icon._bell {
+  mask-image: url("../images/icons/icon-bell.svg");
+}
+.icon.max-size {
+  width: 100% !important;
+  height: 100% !important;
+}
+.icon.max-size._smaller {
+  width: 65% !important;
+  height: 65% !important;
   vertical-align: middle;
-}
-.geolink__icon {
-  margin-right: 2px;
 }
 
 .link {
   vertical-align: middle;
-}
-.link.link_hover-red:hover {
-  color: #c00;
-}
-.link.geolink, .link.geolink:visited {
+  display: inline-flex;
+  align-items: baseline;
   color: #bfbfbf;
 }
-.link.link_header.link_active {
-  color: #5a82b8;
-  font-size: 1.2em;
+.link:visited {
+  color: #bfbfbf;
+}
+.link:hover {
+  cursor: pointer;
+  color: red;
+}
+.link:hover ._type-icon {
+  background-color: red;
+}
+.link:hover ._type-text {
+  color: red !important;
+}
+.link__item {
+  display: inline-block;
+  color: #bfbfbf;
+}
+.link__item._type-image {
+  width: 100%;
+}
+.link__item._type-icon {
+  width: 0.9em;
+  height: 0.9em;
+  background-color: #bfbfbf;
+  margin-right: 5px;
+}
+.link__item._type-icon._hovered:hover {
+  opacity: 0.5;
+}
+.link._bolder {
+  font-weight: 500;
+}
+.link._geolink {
+  padding-right: 14px;
+}
+
+.content {
+  min-width: 1000px;
 }
 
 .container {
   margin-left: auto;
   margin-right: 240px;
 }
-.container.headline {
+.container._headline {
   margin-top: 5px;
   padding: 0 6px 0 20px;
   font-size: 0.94em;
   line-height: 41px;
   vertical-align: middle;
   font-weight: bold;
-}
-.container.headline .icon {
-  display: inline-block;
-  width: 36px;
-  height: 36px;
-}
-.container.mainline .row {
-  margin-left: auto;
-}
-
-.content {
-  min-width: 1000px;
 }
 
 .row {
@@ -76,24 +122,145 @@ body {
 .datetime {
   color: rgba(195, 195, 195, 0.65);
   font-size: 0.91em;
-  font-family: serif;
+  font-family: sans-serif;
 }
-.datetime span {
+.datetime .datetime__item {
   vertical-align: middle;
   font-weight: normal;
 }
-.datetime span::after {
+.datetime .datetime__item::after {
   content: " ";
 }
+.datetime .datetime__time {
+  word-spacing: -2px;
+}
 
-.icon-cart {
-  background: url(//yastatic.net/s3/home-static/skins/_/deoJnU49C43wIkxlR7FCDLZMBWM.svg) no-repeat center 8px;
+.icon-bar__item {
+  display: inline-block;
+  width: 36px;
+  height: 36px;
   opacity: 0.3;
 }
 
-.icon-notifier__bell svg {
-  fill: rgba(255, 255, 255, 0.3);
+.blink {
+  animation: blink 2s infinite;
+}
+
+.info-content {
+  display: flex;
+  width: 941px;
+  justify-content: center;
+  margin: 0 auto;
+}
+.info-content__left {
+  flex: 1 0 66.6%;
+}
+.info-content__right {
+  flex: 0 0 33.3%;
+}
+
+.category-list__item {
+  font-size: 127%;
+  font-family: "Yandex Sans Text", Arial, sans-serif;
+  font-weight: 500;
+  margin-right: 0.5em;
+}
+.category-list__item._active .category-list__text {
+  color: #5a82b8;
+}
+.category-list__item._warning {
+  color: #ee7b00;
+  font-size: 100%;
+  line-height: 1.36;
+  font-weight: normal;
   vertical-align: bottom;
+}
+.category-list__text {
+  color: rgba(90, 130, 184, 0.75);
+}
+
+.news__header, .news__body {
+  margin-bottom: 8px;
+}
+
+.news-list__logo {
+  border: 1px solid #bfbfbf;
+}
+.news-list__item {
+  max-width: 95%;
+}
+
+.values-list__item {
+  display: inline-block;
+  margin-right: 10px;
+}
+.values-list__name {
+  font-size: 0.94em;
+  margin-right: 5px;
+}
+.values-list__value {
+  color: #bfbfbf;
+  margin-right: 5px;
+}
+.values-list__diff {
+  color: #999;
+}
+
+.weather {
+  margin-bottom: 16px;
+}
+.weather__header {
+  margin-bottom: 8px;
+}
+.weather__image {
+  margin-right: 5px;
+}
+.weather__item {
+  font-size: 26px;
+  margin-right: 14px;
+}
+.weather__item._small {
+  font-size: 12px;
+  position: relative;
+  vertical-align: bottom;
+}
+.weather__item._small::before {
+  display: block;
+  content: " ";
+  position: absolute;
+  top: -100%;
+  color: rgba(195, 195, 195, 0.65);
+}
+.weather__item._small._text-day::before {
+  content: "Днем";
+}
+.weather__item._small._text-morning::before {
+  content: "Утром";
+}
+.weather__item._small._text-evening::before {
+  content: "Вечером";
+}
+.weather__image {
+  width: 1em;
+  height: 1em;
+  align-self: center;
+}
+
+.road__header {
+  font-size: 90%;
+  margin-bottom: 8px;
+}
+.road__body {
+  display: flex;
+  align-items: center;
+}
+.road__image {
+  flex-basis: 38px;
+  margin-right: 10px;
+}
+.road__grade {
+  font-size: 26px;
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
