--- a/src/yandex/style/main.sass
+++ b/src/yandex/style/main.sass
@@ -1,5 +1,13 @@
 @import "../fonts/YS_text/stylesheet.css"
 
+@keyframes blink
+  from,
+  to
+    opacity: 1
+
+  50%
+    opacity: 0
+
 *
   margin: 0
   padding: 0
@@ -16,53 +24,89 @@ body
   font-size: 93.75%
   min-width: 1000px
 
-.geolink
-  padding-right: 14px
+.icon
+  display: inline-block
+  mask-size: 100% 100%
+  mask-position: center
+  width: 100%
+  height: 100%
+  vertical-align: baseline
 
-  *
-    vertical-align: middle
+  &._geo
+    mask-image: url("../images/icons/icon-geo.svg")
 
-  &__icon
-    margin-right: 2px
+  &._cart
+    mask-image: url("../images/icons/icon-cart.png")
+
+  &._bell
+    mask-image: url("../images/icons/icon-bell.svg")
+
+  &.max-size
+    width: 100% !important
+    height: 100% !important
+
+    &._smaller
+      width: 65% !important
+      height: 65% !important
+      vertical-align: middle
 
 .link
   vertical-align: middle
+  display: inline-flex
+  align-items: baseline
+  color: #bfbfbf
 
-  &.link_hover-red:hover
-    color: #c00
-
-  &.geolink,
-  &.geolink:visited
+  &:visited
     color: #bfbfbf
 
-  &.link_header.link_active
-    color: #5a82b8
-    font-size: 1.2em
+  &:hover
+    cursor: pointer
+    color: red
 
+    ._type-icon
+      background-color: red
+
+    ._type-text
+      color: red !important
+
+  &__item
+    display: inline-block
+    color: #bfbfbf
+
+    &._type-image
+      width: 100%
+
+
+  &__item._type-icon
+    width: 0.9em
+    height: 0.9em
+    background-color: #bfbfbf
+    margin-right: 5px
+
+    &._hovered:hover
+      opacity: 0.5
+
+  &._bolder
+    font-weight: 500
+
+  &._geolink
+    padding-right: 14px
+
+
+.content
+  min-width: 1000px
 
 .container
   margin-left: auto
   margin-right: 240px
 
-  &.headline
+  &._headline
     margin-top: 5px
     padding: 0 6px 0 20px
     font-size: .94em
     line-height: 41px
     vertical-align: middle
     font-weight: bold
-
-    .icon
-      display: inline-block
-      width: 36px
-      height: 36px
-
-  &.mainline
-    .row
-      margin-left: auto
-
-.content
-  min-width: 1000px
 
 .row
   display: flex
@@ -72,24 +116,146 @@ body
 .datetime
   color: rgba(195, 195, 195, .65)
   font-size: .91em
-  font-family: serif
+  font-family: sans-serif
 
-  span
+  .datetime__item
     vertical-align: middle
     font-weight: normal
 
-  span::after
+  .datetime__item::after
     content: ' '
 
+  .datetime__time
+    word-spacing: -2px
 
-.icon-cart
-  background: url(//yastatic.net/s3/home-static/skins/_/deoJnU49C43wIkxlR7FCDLZMBWM.svg) no-repeat center 8px
-  opacity: .3
 
-.icon-notifier__bell svg
-  fill: rgba(255, 255, 255, 0.3)
-  vertical-align: bottom
+.icon-bar
+  &__item
+    display: inline-block
+    width: 36px
+    height: 36px
+    opacity: .3
+
+.blink
+  animation: blink 2s infinite
+
+.info-content
+  display: flex
+  width: 941px
+  justify-content: center
+
+  margin: 0 auto
+
+  &__left
+    flex: 1 0 66.6%
+
+  &__right
+    flex: 0 0 33.3%
+
+
+.category-list
+  &__item
+    font-size: 127%
+    font-family: 'Yandex Sans Text', Arial, sans-serif
+    font-weight: 500
+    margin-right: 0.5em
+
+    &._active .category-list__text
+      color: #5a82b8
+
+    &._warning
+      color: #ee7b00
+      font-size: 100%
+      line-height: 1.36
+      font-weight: normal
+      vertical-align: bottom
+
+  &__text
+    color: rgba(90, 130, 184, .75)
 
 
 .news
-  &__top-line
+  &__header,
+  &__body
+    margin-bottom: 8px
+
+.news-list
+  &__logo
+    border: 1px solid #bfbfbf
+
+  &__item
+    max-width: 95%
+
+.values-list
+  &__item
+    display: inline-block
+    margin-right: 10px
+
+  &__name
+    font-size: .94em
+    margin-right: 5px
+
+  &__value
+    color: #bfbfbf
+    margin-right: 5px
+
+  &__diff
+    color: #999
+
+.weather
+  margin-bottom: 16px
+
+  &__header
+    margin-bottom: 8px
+
+  &__image
+    margin-right: 5px
+
+  &__item
+    font-size: 26px
+    margin-right: 14px
+
+    &._small
+      font-size: 12px
+      position: relative
+      vertical-align: bottom
+
+      &::before
+        display: block
+        content: ' '
+        position: absolute
+        top: -100%
+
+        color: rgba(195, 195, 195, .65)
+
+      &._text-day::before
+        content: 'Днем'
+
+      &._text-morning::before
+        content: 'Утром'
+
+      &._text-evening::before
+        content: 'Вечером'
+
+  &__image
+    width: 1em
+    height: 1em
+    align-self: center
+
+.road
+
+  &__header
+    font-size: 90%
+    margin-bottom: 8px
+
+  &__body
+    display: flex
+    align-items: center
+
+  &__image
+    flex-basis: 38px
+    margin-right: 10px
+
+  &__grade
+    font-size: 26px
+    margin-right: 10px
