--- a/public/yandex/style/block_link/link.css
+++ b/public/yandex/style/block_link/link.css
@@ -1,8 +1,8 @@
 .link {
-  vertical-align: middle;
   display: inline-flex;
   align-items: baseline;
   color: #bfbfbf;
+  vertical-align: middle;
 }
 .link:visited {
   color: #bfbfbf;
@@ -25,8 +25,8 @@
   opacity: 0.5;
 }
 .link__content {
-  display: inline-block;
-  transition: all ease 0.2s;
+  display: flex;
+  transition: all ease 0.3s;
 }
 .link__content._type-text._text-white {
   color: #bfbfbf;
@@ -44,9 +44,22 @@
   height: 0.9em;
   background-color: #bfbfbf;
 }
+.link__content._rounded {
+  border-radius: 50%;
+}
 .link__content._geo {
   margin-right: 5px;
 }
 .link._geolink {
   padding-right: 14px;
+}
+.link._vertical {
+  flex-direction: column;
+  align-items: center;
+}
+.link._vertical ._type-image {
+  margin-bottom: 5px;
+}
+.link._vertical:hover ._type-image {
+  transform: translate(0, -15%);
 }
