--- a/public/yandex/style/block_news/news.css
+++ b/public/yandex/style/block_news/news.css
@@ -1,4 +1,4 @@
-.news__header, .news__body {
+.news__header {
   margin-bottom: 8px;
 }
 .news-list__logo {
@@ -7,4 +7,6 @@
 }
 .news-list__item {
   max-width: 95%;
+  line-height: 1.36;
+  margin-bottom: 8px;
 }
