--- a/src/yandex/style/block_icon/icon.sass
+++ b/src/yandex/style/block_icon/icon.sass
@@ -28,6 +28,16 @@
   &._person-plus
     mask-image: url("../images/icons/person-add.svg")
 
+  &._thumb-up
+    mask-image: url("../images/icons/icon-thumb_up.svg")
+
+
+  &._thumb-down
+    mask-image: url("../images/icons/icon-thumb_down.svg")
+
+  &._arrow-share
+    mask-image: url("../images/icons/icon-arrow_share.svg")
+
   &._max-size
     width: 100%
     height: 100%
@@ -39,3 +49,4 @@
 
   &._paint-lighter
     bakground-color: rgba(255, 255, 255)
+
