--- a/src/yandex/style/block_link/link.sass
+++ b/src/yandex/style/block_link/link.sass
@@ -32,7 +32,7 @@
     display: flex
     transition: all ease 0.3s
 
-    &._type-text._text-white
+    &._text-white
       color: #bfbfbf
 
     &._type-image
@@ -53,6 +53,23 @@
 
     &._geo
       margin-right: 5px
+
+    &._bigger
+      width: 1.5em
+      height: 1.5em
+      margin-right: 0.6em
+
+    &._further
+      margin-right: 16px
+
+    &._first-red:first-letter
+      color: red
+
+    &._no-margin
+      margin: 0
+
+  &._footer
+    margin-right: 2%
 
   &._geolink
     padding-right: 14px
