--- a/public/yandex/style/block_link/link.css
+++ b/public/yandex/style/block_link/link.css
@@ -28,7 +28,7 @@
   display: flex;
   transition: all ease 0.3s;
 }
-.link__content._type-text._text-white {
+.link__content._text-white {
   color: #bfbfbf;
 }
 .link__content._type-image {
@@ -50,6 +50,23 @@
 .link__content._geo {
   margin-right: 5px;
 }
+.link__content._bigger {
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: 0.6em;
+}
+.link__content._further {
+  margin-right: 16px;
+}
+.link__content._first-red:first-letter {
+  color: red;
+}
+.link__content._no-margin {
+  margin: 0;
+}
+.link._footer {
+  margin-right: 2%;
+}
 .link._geolink {
   padding-right: 14px;
 }
@@ -62,4 +79,17 @@
 }
 .link._vertical:hover ._type-image {
   transform: translate(0, -15%);
+}
+
+.widget {
+  display: flex;
+  background-color: #222;
+  padding: 5%;
+  border-radius: 7%;
+}
+
+.mail-bar {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
