--- a/src/yandex/style/main.sass
+++ b/src/yandex/style/main.sass
@@ -1,4 +1,4 @@
-@import "../fonts/YS_text/stylesheet.css"
+@import "../fonts/YS_text/stylesheet"
 @import "block_link/link"
 @import "block_icon/icon"
 @import "block_datetime/datetime"
@@ -65,3 +65,203 @@ body
   &__right
     flex: 0 0 33.3%
 
+.zen-section
+  padding-top: 20px
+
+  &__wrapper
+    display: flex
+    width: 100%
+    flex-direction: row
+
+  &__main-part
+    flex: 1 0 66.6%
+    margin-right: 5px
+
+  &__side-part
+    flex: 0 0 33.3%
+
+  &__elem
+    padding: 15px 2.5%
+    background-color: #1D1E22
+    transition: background-color 0.3s ease
+    border-radius: 18px
+
+    &._hover-lighter:hover
+      background-color: #242529
+
+.zen-article
+  display: block
+
+
+  &__header
+    display: flex
+    width: 100%
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 10px
+
+    .zen-article
+      display: none
+
+  &__publisher
+    display: flex
+    align-items: center
+    font-size: 16px
+    font-weight: 500
+
+  &__buttons
+    font-size: 14px
+
+  &__preview
+    flex: 0 0 47%
+    max-height: 200px
+    border-radius: 18px
+
+    margin-right: 3%
+
+  &__content
+    display: flex
+
+  &__headline
+    color: #bfbfbf
+    margin-bottom: 5px
+
+  &__short-view,
+  &__date
+    color: #fff9
+    font-size: 14px
+
+  &__social
+    display: block
+    font-size: 14px
+
+.social
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  padding-top: 10px
+
+  &__people
+    display: flex
+    align-items: center
+    color: #fff9
+
+  &__counter
+    display: block
+
+    &-number
+      font-weight: 500
+
+.image-bar
+  display: flex
+
+  &__elem
+    border-radius: 50%
+
+    display: block
+    position: relative
+
+    width: 1.5em
+    height: 1.5em
+
+    right: 5px
+
+    &:first-child
+      right: 0
+      z-index: 1
+
+      outline: 2px solid #1D1E22
+
+.zen-categories
+  padding-left: 5%
+  padding-right: 5%
+
+  &__header
+    display: flex
+    align-items: center
+    font-size: 18px
+    font-weight: bold
+    margin-bottom: 10px
+
+  &__subheader
+    text-transform: uppercase
+    color: rgba(255, 255, 255, 0.8)
+    font-size: 13px
+    font-weight: 500
+    margin-bottom: 10px
+
+  &__list
+    display: flex
+    flex-direction: column
+    font-size: 16px
+
+.categories-list
+  list-style: none
+
+  &__elem
+    display: flex
+    flex-direction: row
+
+    align-items: center
+    margin: 15px
+
+.page-footer
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  align-items: center
+  position: absolute
+  bottom: 0
+  left: 0
+
+  width: 100%
+  padding: 10px 1.5%
+
+  background-color: #15161a
+
+  &__links-list
+    margin: 0
+    justify-content: space-between
+
+
+.widget
+  width: 100%
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  align-items: center
+  background-color: #222
+  padding: 7px 15px
+  border-radius: 7px
+  transition: all ease 0.3s
+  margin-bottom: 7px
+
+  &._hover-jump:hover
+    transform: translate(-5%, 0)
+
+.mail-bar
+  width: 10%
+  padding-top: 7px
+  padding-right: 7px
+  position: absolute
+  right: 0
+  top: 0
+
+.mail
+  &__item
+    fomt-size: 18px
+    width: 100%
+    align-items: center
+    margin-bottom: 10px
+
+    &._mail-line
+      font-weight: 600
+      justify-content: space-between
+
+  &__messages-total
+    margin-left: 3%
+    font-weight: 600
+
+.plus
+  justify-content: start
+  align-items: center
