HTML-CSS-learning-2 / dev / yandex     - Убрал лишние файлы

--- a/src/yandex/style/main.sass
+++ b/src/yandex/style/main.sass
@@ -1,15 +1,15 @@
 @import "../fonts/YS_text/stylesheet"
-@import "block_link/link"
-@import "block_icon/icon"
-@import "block_datetime/datetime"
-@import "block_values-list/values-list"
-@import "block_icon-bar/icon-bar"
-@import "block_category-list/category-list"
-@import "block_news/news"
-@import "block_weather/weather"
-@import "block_road/road"
-@import "block_link-bar/link-bar"
-@import "block_search-line/search-line"
+@import "blocks/link/link"
+@import "blocks/icon/icon"
+@import "blocks/datetime/datetime"
+@import "blocks/block_values-list/values-list"
+@import "blocks/icon-bar/icon-bar"
+@import "blocks/category-list/category-list"
+@import "blocks/block_news/news"
+@import "blocks/block_weather/weather"
+@import "blocks/block_road/road"
+@import "blocks/block_link-bar/link-bar"
+@import "blocks/block_search-line/search-line"
 
 *
   margin: 0
